# w-utils

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
shared/: io.h
utils/cat/: CMakeLists.txt  cat.cpp
utils/cp/: CMakeLists.txt  cp-boost.cpp  cp-linux.cpp  cp-options.cpp  cp-std.cpp  cp.cpp  cp.h
utils/false/: CMakeLists.txt  false.cpp
utils/ls/: CMakeLists.txt  ls-boost.cpp  ls-options.cpp  ls.cpp  ls.h  mktest
